# TeachMateFunkcija

./: CMakeLists.txt  README.md  example_grades.txt  main.cpp  main.h  teach_mate.cpp  teach_mate.h
